# DisklessWorkstation

./: .gitignore  CMakeLists.txt  README.md  build.bat  conanfile.py
conan_profiles/: msvc-vs2022
docs/: DOWNLOADER_USAGE.md  SEEDER_USAGE.md  TORRENT_MANAGER_TESTING.md  TORRENT_MANAGER_USAGE.md  TRACKER_EXPLANATION.md
src/: downloader.cpp  downloader.hpp  main.cpp  seeder.cpp  seeder.hpp  torrent_builder.cpp  torrent_builder.hpp  torrent_creator.cpp  torrent_creator.hpp  torrent_manager.cpp  torrent_manager.hpp
